--- a/OnRoad/AndroidManifest.xml
+++ b/OnRoad/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
         
         <activity android:name="org.chinenv.onroad.HomeActivity" android:label="@string/app_name" android:theme="@style/CustomActionBarTheme" android:screenOrientation="portrait"/>
+        <activity android:name="org.chinenv.onroad.ui.activity.RegisterAndLoginActivity" android:label="@string/app_name" android:theme="@style/CustomActionBarTheme" android:screenOrientation="portrait"/>
         
     </application>
 
