--- a/OnRoad/AndroidManifest.xml
+++ b/OnRoad/AndroidManifest.xml
@@ -5,17 +5,18 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/CustomActionBarTheme" >
+        >
         <activity
             android:name="org.chinenv.onroad.ui.activity.GuidSplashActivity"
             android:label="@string/app_name" 
+            android:theme="@style/CustomTranslateActionBarTheme" 
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +25,18 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="org.chinenv.onroad.HomeActivity" android:label="@string/app_name" android:theme="@style/CustomActionBarTheme" android:screenOrientation="portrait"/>
-        <activity android:name="org.chinenv.onroad.ui.activity.RegisterAndLoginActivity" android:label="@string/app_name" android:theme="@style/CustomActionBarTheme" android:screenOrientation="portrait"/>
+        <activity 
+            android:name="org.chinenv.onroad.HomeActivity" 
+            android:label="@string/app_name" 
+            android:theme="@style/CustomActionBarTheme" 
+            android:screenOrientation="portrait"/>
+        
+        <activity 
+            android:name="org.chinenv.onroad.ui.activity.RegisterAndLoginActivity" 
+            android:label="@string/app_name" 
+            android:theme="@style/CustomTranslateActionBarTheme" 
+            android:screenOrientation="portrait"
+            />
         
     </application>
 
